Add ML-DSA-44 support for public key credential
This introduces support for ML-DSA-44 PQC public keys as per
the identity-based transparency log specification.

The implementation includes an internal package for parsing and
generating ML-DSA public keys per RFC9881. This will be removed once Go
1.27 lands.
